# grants

./: .gitignore  Makefile  README.md  grant_registry.yaml  pyproject.toml  setup.py
.claude/: response-template-guidelines.md
.github/workflows/: deploy.yml  test.yml
.vercel/: project.json
arnold-congressional-districts/: README.md  grant.yaml
arnold-labor-supply/: README.md  grant.yaml
arnold-salt-amt/: README.md  grant.yaml
arnold-salt-amt/application/: questions.yaml
common/: README.md  organization_details.yaml
docs/: grants_data.js  grants_data.json  index.html
docs/assets/: index-B60VJ-ti.css  index-BOxymg-K.js
g7-govai/: README.md  grant.yaml
g7-govai/application/: form_responses.md  questions.yaml
gitlab/: IMPROVEMENTS_SUMMARY.md  README.md  README_improved.md  grant.yaml  questions.yaml
gitlab/responses/: 01_contact_information.md  02_project_title_summary.md  02a_project_title.md  02b_project_summary.md  03_project_leadership.md  04_ai_use.md  05_scope_of_work.md  05_scope_of_work_SHORT.md  06_data_sources.md  07_technical_expertise.md  07_technical_expertise_SHORT.md  08_ethics_and_bias.md  08_ethics_and_bias_FULL.md  08_ethics_and_bias_SHORT.md  08_ethics_and_bias_improved.md  09_stakeholders_impact.md  09_stakeholders_impact_FULL.md  09_stakeholders_impact_improved.md  09a_stakeholders_who.md  09b_stakeholders_how_many.md  09c_stakeholders_what_impact.md  09d_change_to_existing.md  README.md
gitlab/supporting_docs/: GitLab - Concept Note - AI for Economic Opportunity - Due Oct. 31, 2025.docx  Gitlab_ PolicyEngine_Starlight.docx
grants_builder/: __init__.py  builder.py  builder.py.bak  cli.py  exporter.py  utils.py
myfriendben/: README.md  grant.yaml
myfriendben/application/: questions.yaml
neo/: README.md  grant.yaml  questions.yaml
neo/responses/: 01_mission_vision.md  02_organization_description.md  03_research_principles.md  04_capacity_sustainability.md  04_innovation_imagination.md  org_details.md
neo/supporting_docs/: README.md
nsf-cssi/: README.md  assembled_proposal.md  grant.yaml  nsf_config.yaml  questions.yaml
nsf-cssi/budget/: budget.json  budget.yaml  budget_justification.md  budget_narrative.md
nsf-cssi/communications/: email_advisory_board_invite.md  email_john_sabelhaus.md  email_program_officer_oac.md  email_program_officer_sbe.md
nsf-cssi/docs/: assembled_proposal.docx  assembled_proposal.html  assembled_proposal.md  data_management_plan.md  references.bib  references.md
nsf-cssi/internal/: README.md  email_nagle_cssi.md  email_program_officer.md  letter_request_amplifi.md  letter_request_atlanta_fed.md  letter_request_barofsky.md  letter_request_feenberg.md  letter_request_myfriendben.md  letter_request_poterba.md  letter_request_psl_pomerleau.md  letter_request_sabelhaus.md  letter_request_unrath.md  letter_request_yale.md
nsf-cssi/scripts/: check_compliance.sh
nsf-cssi/supplementary/: data_management_plan.md
nsf-cssi/tools/nsf_grant_assembler/: __init__.py  cli.py  pyproject.toml
nsf-cssi/tools/nsf_grant_assembler/budget/: __init__.py  manager.py
nsf-cssi/tools/nsf_grant_assembler/core/: __init__.py  assembler.py  validator.py
nsf-cssi/tools/nsf_grant_assembler/data/: nsf_formatting_rules.yaml  references_config.yaml
nsf-cssi/tools/nsf_grant_assembler/pdf/: __init__.py  config.py  generator.py  optimizer.py  templates.py  validator.py
nsf-cssi/tools/nsf_grant_assembler/pdf/templates/: README.md
nsf-cssi/tools/nsf_grant_assembler/programs/: __init__.py  registry.py
nsf-cssi/tools/nsf_grant_assembler/references/: __init__.py  bibliography_generator.py  bibtex_manager.py  citation_extractor.py  config.py  nsf_styles.py
nsf-cssi/tools/nsf_grant_assembler/templates/: proposal_template.md
nsf-cssi/tools/nsf_grant_assembler/utils/: __init__.py  io.py  nsf_rules.py  text.py
pbif/: grant.yaml  questions.yaml
pbif/financials/: policyengine_budget_2026_2027.md  project_roadmap.md  team_bios.md
pbif/responses/: 01_executive_summary.md  02_stage_of_development.md  03_problem_statement.md  04_solution_beneficiaries.md  05_impact_evaluation.md  06_responsible_design.md  07_adoption_scale.md  08_dissemination_learning.md  09_solution_description.md  10_data_sources.md  11_data_management.md  12_stakeholder_engagement.md  13_resources_infrastructure.md  14_scalability_sustainability.md  15_financial_viability.md
pritzker/: grant.yaml
raf-rfi/: submission.html  submission.md
shared/scripts/: build_all.py
tests/: test_builder.py
viewer/: package-lock.json  package.json  vite.config.js
viewer/public/: grants_data.js  grants_data.json
viewer/src/: App.jsx  (+1 more)
(+56 files in other folders)
