[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsf-grant-assembler"
version = "0.1.0"
description = "Professional tools for assembling NSF grant proposals with compliance validation and budget management"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
keywords = ["nsf", "grants", "proposals", "research", "funding", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "python-dateutil>=2.8.0",
    "validators>=0.22.0",
    # PDF generation dependencies
    "pypandoc>=1.13",
    "weasyprint>=61.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "markdown-it-py>=3.0.0",
    "pymdown-extensions>=10.0",
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    # BibTeX and citation processing dependencies
    "bibtexparser>=1.4.0",
    "pylatexenc>=2.10",
    "citeproc-py>=0.6.0",
    "citeproc-py-styles>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
pdf = [
    "pandoc>=2.19.0",  # System dependency, but useful to document
    "texlive-full",    # LaTeX distribution for best results
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/nsf-grant-assembler"
Documentation = "https://nsf-grant-assembler.readthedocs.io"
Repository = "https://github.com/PolicyEngine/nsf-grant-assembler"
"Bug Reports" = "https://github.com/PolicyEngine/nsf-grant-assembler/issues"

[project.scripts]
nsf-assembler = "nsf_grant_assembler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nsf_grant_assembler" = ["data/**/*", "templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["nsf_grant_assembler"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=nsf_grant_assembler --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/nsf_grant_assembler"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]